--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     debugImplementation "androidx.compose.ui:ui-tooling"
 
+
+    //Other Dependencies
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+    implementation 'com.github.bumptech.glide:compose:1.0.0-alpha.3'
 }
