--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -83,4 +85,21 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
     implementation 'com.github.bumptech.glide:compose:1.0.0-alpha.3'
+
+    //Paging Library Dependecy
+    implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+
+    // Navigation Dependency
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+
+    //Room Dependency
+    implementation 'androidx.room:room-runtime:2.5.1'
+    kapt "androidx.room:room-compiler:2.5.1"
+    implementation 'androidx.room:room-ktx:2.5.1'
+
+    //Hilt
+    implementation 'com.google.dagger:hilt-android:2.45'
+    kapt 'com.google.dagger:hilt-compiler:2.45'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 }
