--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,22 @@
 
 buildscript {
     ext {
-        compose_compiler_version = '1.4.0'
+        compose_compiler_version = '1.4.3'
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.45"
     }
 }
 
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+}
+
+configurations {
+    compile.exclude module: 'kotlin-stdlib-jdk7'
+    compile.exclude module: 'kotlin-stdlib-jdk8'
 }
 
 task clean(type: Delete) {
